<resources>
    <string name="app_name">Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="event">Event</string>
    <string name="travel">Travel</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="day0">Day 0</string>
    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="day3">Day 3</string>
    <string name="info">Info</string>
    <string name="map">Map</string>
    <string name="schedule">Schedule</string>
</resources>
